Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,8 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background: #111;
+  background: black;
+  overflow: hidden;
 }
 
 html {
